--- a/deployment/sandbox-v2/helm/charts/healthtest/Chart.yaml
+++ b/deployment/sandbox-v2/helm/charts/healthtest/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 appVersion: "1.0"
-description: A Helm chart for MOSIP Health Check module
+description: A Helm chart for MOSIP Health test module
 name: healthcheck
 version: 1.0
