--- a/deployment/sandbox-v2/helm/charts/healthtest/templates/ingress-file.yaml
+++ b/deployment/sandbox-v2/helm/charts/healthtest/templates/ingress-file.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: {{ .Values.ingress.namespace}} 
   annotations:
      kubernetes.io/ingress.class: "nginx"
-     nginx.com/health-checks: "true"
+     nginx.com/health-checks: "false"
 spec:
   rules:
   - http:
@@ -15,7 +15,7 @@ spec:
       - path: {{ $service.ingressPath }} 
         backend:
           serviceName: {{ $service.serviceName }}
-  #        servicePort: {{ $service.servicePort }}
+          servicePort: {{ $service.servicePort }}
         {{ end }}
       {{- end }}
 
