--- a/deployment/sandbox-v2/helm/charts/healthtest/templates/healthtest-svc.yaml
+++ b/deployment/sandbox-v2/helm/charts/healthtest/templates/healthtest-svc.yaml
@@ -1,12 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.services.healthtest.serviceName }}
-  namespace: {{ .Values.namespace }} 
+  name: {{ .Values.name }}
+  namespace: {{ .Values.namespace }}
 spec:
-  ports:
-  - port: {{ .Values.services.healthtest.servicePort }}
-    targetPort: {{ .Values.services.healthtest.containerPort }}
   selector:
-    app: {{ .Values.services.healthtest.serviceName }}
-
+    app: {{ .Values.name }}
+  ports:
+    - port: {{ .Values.servicePort }}
+      targetPort: {{ .Values.containerPort }}
