--- a/deployment/sandbox-v2/helm/charts/postgres/values.yaml
+++ b/deployment/sandbox-v2/helm/charts/postgres/values.yaml
@@ -3,14 +3,12 @@ name: postgres
 password: postgres
 defaultDb: keycloak # Default DB on Postgres
 user: postgres
-#postgres_server: '{{mz_cluster_any_node}}' # As postgres is on nodeport
 containerPort: 5432
 localStorageName: postgres-local-storage
 localStoragePath: /mnt/mosip_data/postgres  # Assumed that an empty directory is created beforehand
-localStorageHostname: mzworker0 
+localStorageHostname: mzworker0  # Must match in plabooks.
 pvcName: postgres-pvc
 pvName: postgres-pv
 pvSize: 1Gi
 dockerImage: postgres
 dockerTag: 12.2
-nodePort: 30090  # We fix a nodeport, as postgres cannot be accessed via Ingress.
