--- a/deployment/sandbox-v2/roles/postgres-init/tasks/init_db.yml
+++ b/deployment/sandbox-v2/roles/postgres-init/tasks/init_db.yml
@@ -12,7 +12,7 @@
   lineinfile:
     path: '{{pg_sql_path}}/{{pg_db_name}}/{{pg_db_name}}_deploy.properties'
     regexp: '^DB_PORT='
-    line: DB_PORT={{postgres.nodeport}}  # Defined in all.yml
+    line: DB_PORT={{postgres.local_port}}  # Defined in all.yml
 
 - name: '{{pg_db_name}}: Update super user password in postgres init files' 
   lineinfile:
