id auth property corrected

--- a/deployment/sandbox-v2/roles/config-repo/files/properties/id-authentication-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/id-authentication-mz.properties
@@ -236,7 +236,7 @@ id-masterdata-title-service.rest.timeout=${mosip.ida.request.timeout.secs}
 
 #Auth token
 auth-token-generator.rest.uri=http://kernel-auth-service/v1/authmanager/authenticate/clientidsecretkey
-auth-token-validator.rest.uri=${mosip.base.url}/v1/authmanager/authorize/validateToken
+auth-token-validator.rest.uri=http://kernel-auth-service/v1/authmanager/authorize/validateToken
 auth-token-generator.rest.clientId=${mosip.ida.auth.clientId}
 auth-token-generator.rest.secretKey=${mosip.ida.auth.secretKey}
 auth-token-generator.rest.appId=${mosip.ida.auth.appId}
