--- a/deployment/sandbox-v2/roles/config-repo/files/properties/registration-processor-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/registration-processor-mz.properties
@@ -306,7 +306,7 @@ registration.processor.queue.printpostaladdress = postal-service-qa
 #Attributes to be validated in master data validation
 registration.processor.masterdata.validation.attributes = gender,region,province,city
 #TODO: Enable it later
-registration.processor.validateSchema=false
+registration.processor.validateSchema=true
 registration.processor.validateFile=true
 registration.processor.validateChecksum=true
 registration.processor.validateApplicantDocument=false
