--- a/deployment/sandbox-v2/ansible.cfg
+++ b/deployment/sandbox-v2/ansible.cfg
@@ -1,3 +1,4 @@
 [defaults]
 roles_path: roles/
 ansible_python_interpreter: /usr/bin/python2  # Python3 will be best to use with CentOS 8
+host_key_checking: false  # Required for initial key exchange.
