--- a/deployment/sandbox-v2/site.yml
+++ b/deployment/sandbox-v2/site.yml
@@ -6,7 +6,8 @@
 - import_playbook: playbooks/console.yml  # Basic setup on console machine
 - import_playbook: playbooks/nginx.yml # Setting nginx in advance so that Keycloak etc. can be tested 
 - import_playbook: playbooks/postgres.yml
-- import_playbook: playbooks/env.yml # MOSIP DB, Keycloak, hdfs etc.
+- import_playbook: playbooks/env.yml # MOSIP DB, Keycloak
+- import_playbook: playbooks/hdfs.yml
 - import_playbook: playbooks/config-server.yml    
 - import_playbook: playbooks/kernel.yml
 - import_playbook: playbooks/prereg.yml
