--- a/deployment/sandbox-v2/helm/charts/postgres/templates/pg-svc.yaml
+++ b/deployment/sandbox-v2/helm/charts/postgres/templates/pg-svc.yaml
@@ -8,6 +8,8 @@ metadata:
 spec:
   selector:
     app: {{ .Values.name }}
+  type: NodePort
   ports:
     - port: 80 
       targetPort: {{ .Values.containerPort }}
+      nodePort: {{ .Values.nodePort }}
