--- a/deployment/sandbox-v2/helm/charts/postgres/values.yaml
+++ b/deployment/sandbox-v2/helm/charts/postgres/values.yaml
@@ -6,7 +6,7 @@ user: postgres
 containerPort: 5432
 localStorageName: postgres-local-storage
 localStoragePath: /mnt/mosip_data/postgres  # Assumed that an empty directory is created beforehand
-localStorageHostname: mzworker0  # Must match in plabooks.
+localStorageHostname: mzworker0  # Must match in playbooks.
 pvcName: postgres-pvc
 pvName: postgres-pv
 pvSize: 1Gi
