--- a/deployment/sandbox-v2/helm/charts/resident/templates/resident-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/resident/templates/resident-dep.yaml
@@ -27,6 +27,7 @@ spec:
       containers:
       - name: {{ .Values.services.resident.serviceName }} 
         image: {{ .Values.services.resident.dockerImage }}:{{ .Values.services.resident.dockerTag }} 
+        imagePullPolicy: {{ .Values.imagePullPolicy }} 
         env:
         - name: active_profile_env
           value: {{ .Values.activeProfileEnv }} 
