--- a/deployment/sandbox-v2/group_vars/dmzcluster.yml
+++ b/deployment/sandbox-v2/group_vars/dmzcluster.yml
@@ -28,7 +28,7 @@ network: flannel
 network_interface: ""
 
 enable_dashboard: yes
-dashboard_port: '{{dmz_dashboard_port}} 
+dashboard_port: '{{dmz_dashboard_port}}'
 
 # A list of insecure registries you might need to define
 # insecure_registries: []
