--- a/deployment/sandbox-v2/helm/charts/admin/templates/ui-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/admin/templates/ui-dep.yaml
@@ -23,6 +23,7 @@ spec:
       containers:
       - name: {{.Values.services.ui.serviceName}}
         image: {{ .Values.services.ui.dockerImage  }}:{{ .Values.services.ui.dockerTag }}
+        imagePullPolicy: {{ .Values.imagePullPolicy }} 
         ports:
         - containerPort: {{ .Values.services.ui.containerPort }} 
         readinessProbe:
