--- a/deployment/sandbox-v2/playbooks/ssh.yml
+++ b/deployment/sandbox-v2/playbooks/ssh.yml
@@ -23,3 +23,10 @@
       command: 'systemctl disable firewalld'
       become: yes
       ignore_errors: yes
+- hosts: all
+  tasks:
+    - name: update keys in mosipuser
+      authorized_key:
+        user: 'mosipuser'
+        state: present
+        key: '{{lookup("file","/home/mosipuser/.ssh/id_rsa.pub")}}'
