--- a/deployment/sandbox-v2/roles/config-repo/files/properties/id-authentication-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/id-authentication-mz.properties
@@ -380,15 +380,15 @@ notification.time.format=HH:mm:ss
 
 #********* Internal Auth Type *********
 #Configure authentication types permissable for internal authentication 
-internal.auth.types.allowed=otp,bio-FIR,bio-IIR,bio-FACE
+internal.auth.types.allowed=otp,bio-Finger,bio-Iris,bio-FACE
 
 #************ E-KYC********
 #Configure authentications permissable for e-KYC for a country
-ekyc.auth.types.allowed=otp,bio-FIR,bio-IIR,bio-FACE
+ekyc.auth.types.allowed=demo,otp,bio-Finger,bio-Iris,bio-FACE
 
 #***********AuthType Enable***********
 #Configure authentications permissable for a country
-auth.types.allowed=demo,otp,bio-FIR,bio-IIR,bio-FACE
+auth.types.allowed=demo,otp,bio-Finger,bio-Iris,bio-FACE
 
 #***********Certificate type************
 ida.jws.certificate.type=X.509
