--- a/deployment/sandbox-v2/roles/config-repo/files/properties/id-repository-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/id-repository-mz.properties
@@ -112,12 +112,15 @@ mosip.idrepo.salt-generator.chunk-size=10
 mosip.idrepo.vid-service.rest.uri=http://idrepo-vid-service/idrepository/v1/vid/uin/{uin}
 mosip.idrepo.vid-service.rest.httpMethod=GET
 mosip.idrepo.vid-service.rest.headers.mediaType=application/json
-mosip.idrepo.vid-service.rest.timeout=1
+mosip.idrepo.vid-service.rest.timeout=100
 mosip.idrepo.ida.rest.uri=http://ida-internal-service/idauthentication/v1/internal/notify
 mosip.idrepo.ida.rest.httpMethod=POST
 mosip.idrepo.ida.rest.headers.mediaType=application/json
-mosip.idrepo.ida.rest.timeout=1
+mosip.idrepo.ida.rest.timeout=100
 mosip.idrepo.syncdata-service.rest.uri=http://kernel-syncdata-service/v1/syncdata/latestidschema
 mosip.idrepo.syncdata-service.rest.httpMethod=GET
 mosip.idrepo.syncdata-service.rest.headers.mediaType=application/json
-mosip.idrepo.syncdata-service.rest.timeout=1
+mosip.idrepo.syncdata-service.rest.timeout=100
+
+ida.api.id.event.notify=mosip.identity.event.notify
+ida.api.version.event.notify=1.0
