--- a/deployment/sandbox-v2/roles/config-repo/files/properties/pre-registration-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/pre-registration-mz.properties
@@ -95,6 +95,11 @@ kernel.auth.contextpath=authmanager
 kernel.prid.env=http://kernel-pridgenerator-service
 kernel.prid.contextpath=pridgenerator
 
+kernel.syncdata.env=https://sandboxv2.southindia.cloudapp.azure.com
+kernel.syncdata.version=v1/syncdata
+latestidschema.service.contextpath=latestidschema
+mosip.preregistration.id-schema=${kernel.syncdata.env}/${kernel.syncdata.version}/${latestidschema.service.contextpath}
+
 # OTP
 sendOtp.resource.url=${kernel.auth.env}/${masterdata.service.version}/${kernel.auth.contextpath}
 otpChannel.mobile=mobile
@@ -336,3 +341,5 @@ mosip.preregistration.captcha.id.validate = mosip.pre-registration.captcha.id.va
 
 #Id-scheme-json-file
 preregistration.demographic.idschema-json-filename=pre-registration-demographic.json
+
+mosip.preregistration.id-schema=http://kernel-syncdata-service/v1/syncdata/latestidschema
