updating property fixes

--- a/deployment/sandbox-v2/roles/config-repo/files/properties/registration-processor-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/registration-processor-mz.properties
@@ -58,9 +58,9 @@ registration.processor.sourcepackets=id,evidence,optional
 # The mandatory default source packet.(In default configuration this is thd id packet)
 packet.default.source=id
 # the default schema field cagegory (ex - private)
-schema.default.fieldCategory=pvt
+schema.default.fieldCategory=pvt,none
 # The IDSchemaVersion used to create packets in reg-proc
-IDSchema.Version=1.0
+IDSchema.Version=0.1
 
 #---------registration-processor-camel-bridge------------
 
@@ -103,7 +103,7 @@ PASSWORDBASEDTOKENAPI=${authmanager.base.url}/v1/authmanager/authenticate/userid
 KEYBASEDTOKENAPI=${authmanager.base.url}/v1/authmanager/authenticate/clientidsecretkey
 TOKENVALIDATE=${authmanager.base.url}/v1/authmanager/authorize/admin/validateToken
 GETRIDFROMUSERID=${authmanager.base.url}/v1/authmanager/rid
-INTERNALAUTH=${authmanager.base.url}/idauthentication/v1/internal/auth
+INTERNALAUTH=http://ida-internal-service/idauthentication/v1/internal/auth
 
 #Master Data Services
 MASTER=http://kernel-masterdata-service/v1/masterdata
@@ -130,7 +130,7 @@ DEVICEVALIDATEHISTORY=${MASTER}/deviceprovidermanagement/validate/history
 IDREPOSITORY=http://idrepo-identity-service/idrepository/v1/identity/
 IDREPOGETIDBYUIN=http://idrepo-identity-service/idrepository/v1/identity/uin
 UINGENERATOR=http://kernel-idgenerator-service/v1/idgenerator/uin
-RETRIEVEIDENTITYFROMRID=http://kernel-idgenerator-service/idrepository/v1/identity/rid
+RETRIEVEIDENTITYFROMRID=http://idrepo-identity-service/idrepository/v1/identity/rid
 RETRIEVEIDENTITY=http://idrepo-identity-service/idrepository/v1/identity/uin
 CREATEVID=http://idrepo-vid-service/idrepository/v1/vid
 GETUINBYVID=http://idrepo-vid-service/idrepository/v1/vid
@@ -386,3 +386,6 @@ mosip.registration.processor.email.id=mosip.email.send
 
 #Kernel Crypto signature
 registration.processor.signature.isEnabled=true
+
+#BioDedupe stage
+registration.processor.infant.dedupe=N
