updating property fixes

--- a/deployment/sandbox-v2/roles/config-repo/files/properties/resident-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/resident-mz.properties
@@ -38,7 +38,7 @@ token.request.issuerUrl=${mosip.keycloak.issuerUrl}
 #--------------URI--------------------------
 #Auth Services
 KERNELAUTHMANAGER=http://kernel-auth-service/v1/authmanager/authenticate/clientidsecretkey
-REGPROCPRINT={{ }}/registrationprocessor/v1/print/uincard
+REGPROCPRINT=http://regproc-print-service/registrationprocessor/v1/print/uincard
 INTERNALAUTH=http://ida-internal-service/idauthentication/v1/internal/auth
 INTERNALAUTHTRANSACTIONS=http://ida-internal-service/idauthentication/v1/internal/authTransactions
 KERNELENCRYPTIONSERVICE=http://kernel-keymanager-service/v1/keymanager/publickey
@@ -53,16 +53,19 @@ resident.notification.message=Notification has been sent to the provided contact
 #templates
 MASTER=http://kernel-masterdata-service/v1/masterdata
 TEMPLATES=${MASTER}/templates
+REGPROCRESUPDATE=http://regproc-request-handler-service/registrationprocessor/v1/requesthandler/update
 SMSNOTIFIER=http://kernel-notification-service/v1/notifier/sms/send
 EMAILNOTIFIER=http://kernel-notification-service/v1/notifier/email/send
 AUTHTYPESTATUSUPDATE=http://ida-internal-service/idauthentication/v1/internal/authtypes/status
 #Regitstration processor reprint service
-REPRINTUIN={{  }}/registrationprocessor/v1/requesthandler/reprint
+REPRINTUIN=http://regproc-request-handler-service/registrationprocessor/v1/requesthandler/reprint
 #Registration status service
 REGISTRATIONSTATUSSEARCH=http://dmzworker0:30080/registrationprocessor/v1/registrationstatus/search
-resident.center.id=10008
-resident.machine.id=20007
+resident.center.id=10001
+resident.machine.id=10001
 
 #----------------------config data---------------------
 resident.datetime.pattern=yyyy-MM-dd'T'HH:mm:ss.SSS'Z'
 auth.types.allowed=demo,bio-FIR,bio-IIR,bio-FACE
+
+resident.identityjson=registration-processor-identity.json
